fixed overflow scrolling issue

--- a/less/pages.less
+++ b/less/pages.less
@@ -255,6 +255,7 @@ div{
 
 html.overflowscrolling .scroller{
   -webkit-overflow-scrolling : touch;
+  overflow: auto;
   > * {
     -webkit-transform: translateZ(0px);
   }
